--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "argparse>=1.4.0",
     "flake8>=7.3.0",
     "python-dotenv>=1.1.1",
+    "redis>=6.2.0",
     "requests>=2.32.4",
     "structlog>=25.4.0",
 ]
